Fix adaptives on mobile

--- a/src/pages/LendPage/components/ExpandableCardContent/ExpandableCardContent.module.less
+++ b/src/pages/LendPage/components/ExpandableCardContent/ExpandableCardContent.module.less
@@ -48,6 +48,7 @@
 
   @media (max-width: 640px) {
     margin-bottom: 0;
+    gap: 8px;
   }
 }
 .offerHeaderTitle {
